--- a/app/views/friends/index.html.erb
+++ b/app/views/friends/index.html.erb
@@ -2,8 +2,8 @@
 
 <h1>Friends List</h1>
 
-<table class="table" id="friends">
-  <thead>
+<table class="table table-striped table-bordered table-hover" id="friends">
+  <thead class="table-dark">
     <tr>
       <th>First name</th>
       <th>Last name</th>
@@ -21,4 +21,4 @@
   </tbody>
 </table>
 
-<%= link_to "New friend", new_friend_path %>
+<%= link_to "New friend", new_friend_path, class:"btn btn-secondary" %>
