--- a/app/views/friends/_friend.html.erb
+++ b/app/views/friends/_friend.html.erb
@@ -21,6 +21,6 @@
     <%= link_to "Edit", edit_friend_path(friend) %>
   </td>
   <td>
-    <%= link_to "Destroy", friend, method: :delete, data:{ confirm: 'Are you sure?' } %>
+    <%= link_to "Destroy", friend, method: :delete, data:{ turbo_method: :delete, turbo_confirm: 'Are you sure?' } %>
   </td>
 </tr>
