--- a/app/views/friends/index.html.erb
+++ b/app/views/friends/index.html.erb
@@ -8,6 +8,7 @@
       <th>Email</th>
       <th>Phone</th>
       <th>Twitter</th>
+      <th>User Id</th>
       <th colspan="3"></th>
     </tr>
   </thead>
