--- a/app/views/friends/_friend.html.erb
+++ b/app/views/friends/_friend.html.erb
@@ -1,10 +1,7 @@
-<% if current_user.id == friend.user_id %>
+<% if current_user == friend.user %>
 <tr>
   <td>
-    <%= friend.first_name %>
-  </td>
-  <td>
-    <%= friend.last_name %>
+    <%= link_to friend.first_name + " " + friend.last_name, friend, id: "friend_name" %>
   </td>
   <td>
     <%= friend.email %>
@@ -14,18 +11,6 @@
   </td>
   <td>
     <%= friend.twitter %>
-  </td>
-  <td>
-    <%= friend.user_id %>
-  </td>
-  <td>
-    <%= link_to "Show", friend %>
-  </td>
-  <td>
-    <%= link_to "Edit", edit_friend_path(friend) %>
-  </td>
-  <td>
-    <%= link_to "Destroy", friend, method: :delete, data:{ turbo_method: :delete, turbo_confirm: 'Are you sure?' } %>
   </td>
 </tr>
 <% end %>
