--- a/app/views/friends/edit.html.erb
+++ b/app/views/friends/edit.html.erb
@@ -6,5 +6,6 @@
 
 <div>
   <%= link_to "Show this friend", @friend, class:"btn btn-secondary" %>
-  <%= link_to "Back to friends", friends_path, class:"btn btn-secondary" %>
+  <%= link_to "Delete", @friend, method: :delete, data: { turbo_method: :delete, turbo_confirm: "Are you sure?" }, class: "btn btn-danger" %>
+  <%= link_to "Back to friends", friends_path, class:"btn btn-dark" %>
 </div>
