--- a/app/views/friends/index.html.erb
+++ b/app/views/friends/index.html.erb
@@ -1,15 +1,13 @@
+<% if user_signed_in? %>
 <h1>Friends List</h1>
 
 <table class="table table-striped table-bordered table-hover" id="friends">
   <thead class="table-dark">
     <tr>
-      <th>First name</th>
-      <th>Last name</th>
+      <th>Friend Name</th>
       <th>Email</th>
       <th>Phone</th>
       <th>Twitter</th>
-      <th>User Id</th>
-      <th colspan="3"></th>
     </tr>
   </thead>
 
@@ -21,3 +19,7 @@
 </table>
 
 <%= link_to "New friend", new_friend_path, class:"btn btn-secondary" %>
+<% else %>
+  <h1>Hello World</h1>
+  <p>Find me in app/views/home/index.html.erb</p>
+<% end %>
