--- a/app/views/friends/show.html.erb
+++ b/app/views/friends/show.html.erb
@@ -26,5 +26,5 @@
 
   <%= link_to "Edit this friend", edit_friend_path(@friend), class:"btn btn-secondary" %>
   <%= link_to "Back to friends", friends_path, class:"btn btn-secondary" %>
-  <%= link_to "Destroy this friend", @friend, method: :delete, data:{ turbo_method: :delete, turbo_confirm: 'Are you sure?' }, class:"btn btn-secondary" %>
+  <%= link_to "Delete this friend", @friend, method: :delete, data:{ turbo_method: :delete, turbo_confirm: 'Are you sure?' }, class:"btn btn-danger" %>
 </div>
