--- a/app/assets/stylesheets/friends.css
+++ b/app/assets/stylesheets/friends.css
@@ -1,7 +1,7 @@
-#friend_name {
+.anchor {
     text-decoration: none;
 }
 
-#friend_name:hover {
+.anchor:hover {
     text-decoration: underline;
 }
