--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,1 +1,16 @@
 <h1> About Us... </h1>
+<h5 class="mt-5">
+    Hello! My name is Siraj Mohammed Saleem, currently in term 2 of computer programming at Algonquin College and I am passionate about coding in Ruby and Ruby on Rails. I have a strong understanding of web development technologies, including HTML, CSS, JavaScript, and related libraries and frameworks. Additionally, I am experienced in Java, PHP, XML, and MySQL.
+</h5>
+
+<h5 class="mt-3">
+    In addition to my web development skills, I have also published two Android applications. I take pride in my ability to learn quickly and adapt to new technologies, and I am constantly seeking out new challenges to grow my skills.
+</h5>
+
+<h5 class="mt-3 mb-5">
+    Thank you for visiting my page, and I look forward to connecting with you!
+</h5>
+
+<a href="https://sirajsaleem.com" class="btn btn-primary me-2" id="phone-size">My Portfolio</a>
+<a href="https://github.com/sirajms5" class="btn btn-primary me-2" id="phone-size">GitHub <i class="fab fa-github"></i></a>
+<a href="#" class="btn btn-primary" id="phone-size"> LinkedIn <i class="fab fa-linkedin"></i></a>
